--- a/scss/split-section.scss
+++ b/scss/split-section.scss
@@ -18,7 +18,7 @@
                 text-align: center;
             }
             @include media-breakpoint-down(md){
-                padding: $space 3rem;
+                padding: $space 0rem;
             }
             h2{
                 margin-bottom: 2rem;
